--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,38 @@
-node_modules
-# Keep environment variables out of version control
+# Node.js dependencies
+node_modules/
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment variables
 .env
+
+# Build output
+.next/
+out/
+
+# OS-specific files
+.DS_Store
+Thumbs.db
+
+# Prisma
+prisma/migrations/
+
+# Miscellaneous
+*.swp
+*.swo
+*.bak
+*.tmp
+
+# IDE-specific files
+.vscode/
+.idea/
+*.iml
+
+# Generated files
+public/avatars/
+public/*.svg
