--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@prisma/client": "^6.3.1",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "env": "^0.0.2",
     "express": "^4.21.2",
+    "identicon.js": "^2.3.3",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.9",
     "postgres": "^3.4.5",
