--- a/package.json
+++ b/package.json
@@ -1,26 +1,33 @@
 {
-  "name": "api",
+  "name": "gokigen-api",
   "version": "1.0.0",
+  "description": "Gokigen App API Server",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "build": "prisma generate",
+    "prod:build": "NODE_ENV=production prisma generate",
+    "prod:start": "NODE_ENV=production node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
-  "description": "",
   "dependencies": {
-    "@prisma/client": "^6.3.1",
+    "@prisma/client": "^5.0.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "env": "^0.0.2",
-    "express": "^4.21.2",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
+    "helmet": "^7.0.0",
     "identicon.js": "^2.3.3",
-    "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.1.9",
-    "postgres": "^3.4.5",
-    "prisma": "^6.3.1"
+    "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.10.0",
+    "prisma": "^5.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
